--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
             <button class="operator" data-value="=">=</button>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
